--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
             "email": "frizalichal01@gmail.com"
         }
     ],
+
     "require": {
         "php" : ">=8.0"
     },
+    
     "autoload": {
         "psr-4": {
-            "Programmer\\" : "src/"
+            "Programmer\\Belajar\\" : "src/"
         }
     }
     
